Added TDA page and restructured research projects

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="#About" class="w3-bar-item w3-button">About</a>
-      <a href="#Research" class="w3-bar-item w3-button">Research</a>
+      <a href="#Graduate_Research" class="w3-bar-item w3-button">Research</a>
       <a href="#Projects" class="w3-bar-item w3-button">Projects</a>
     </div>
   </div>
@@ -53,9 +53,25 @@
     </p>
   </div>
 
-  <!-- Research Section -->
-  <div class="w3-container w3-padding-32" id="Research">
-    <h3 class="w3-border-bottom w3-border-grey w3-padding-16">Research</h3>
+  <!-- Graduate Research Section -->
+  <div class="w3-container w3-padding-32" id="Graduate Research">
+    <h3 class="w3-border-bottom w3-border-grey w3-padding-16">Graduate Research</h3>
+  </div>
+
+  <div class="w3-row-padding">
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+          <div class="w3-display-topleft w3-black">
+            <a class="w3-button w3-black" href="./tda.html">Topological Data Analysis</a>
+          </div>
+        <img src="./images/tda/kde.gif" alt="tda" style="width:100%">
+      </div>
+    </div>
+  </div>
+
+  <!-- Undergraduate Research Section -->
+  <div class="w3-container w3-padding-32" id="Undergraduate Research">
+    <h3 class="w3-border-bottom w3-border-grey w3-padding-16">Undergraduate Research</h3>
   </div>
 
   <div class="w3-row-padding">
