Updated image of me

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <!-- About Section -->
   <div class="w3-container w3-padding-32" id="About">
     <h3 class="w3-border-bottom w3-border-grey w3-padding-16">About</h3>
-    <img class="w3-image" src="./images/me.jpg" alt="me" width="200" height="240" style="padding: 0px 16px 0px 16px; float:left">
+    <img class="w3-image" src="./images/me_trimmed.jpg" alt="me" width="20%" height="20%" style="padding: 0px 16px 0px 16px; float:left">
     <p>
       I am graduate student in Mathematics at Auburn University studying under <a class="weblink" href="http://webhome.auburn.edu/~hks0015/">Hal Schenck</a>.
       I earned a B.S. in Mathematics with minors in History and Classics at the University of Kentucky.
