Added Lefschetz page

--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
         <img src="./images/tda/kde.gif" alt="tda" style="width:100%">
       </div>
     </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black">
+          <a class="w3-button w3-black" href="./lefschetz.html">Lefschetz Properties</a>
+        </div>
+        <!-- <img src="./images/tda/kde.gif" alt="lefschetz" style="width:100%"> -->
+      </div>
+    </div>
   </div>
 
   <!-- Undergraduate Research Section -->
