--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="#About" class="w3-bar-item w3-button">About</a>
-      <a href="#Graduate_Research" class="w3-bar-item w3-button">Research</a>
+      <a href="#GraduateResearch" class="w3-bar-item w3-button">Research</a>
       <a href="#Projects" class="w3-bar-item w3-button">Projects</a>
     </div>
   </div>
@@ -40,21 +40,21 @@
   <!-- About Section -->
   <div class="w3-container w3-padding-32" id="About">
     <h3 class="w3-border-bottom w3-border-grey w3-padding-16">About</h3>
-    <img class="w3-image" src="./images/me_trimmed.jpg" alt="me" width="20%" height="20%" style="padding: 0px 16px 0px 16px; float:left">
+    <img class="w3-image" src="./images/me_trimmed.jpg" alt="me" style="max-width:30%; height:auto; padding: 0px 16px 0px 16px; float:left">
     <p>
       I am graduate student in Mathematics at Auburn University studying under <a class="weblink" href="http://webhome.auburn.edu/~hks0015/">Hal Schenck</a>.
       I earned a B.S. in Mathematics with minors in History and Classics at the University of Kentucky.
       While at the University of Kentucky, I conducted research with the <a class="weblink" href="http://www.ms.uky.edu/~geometrylab/">University of Kentucky Math Lab</a>
       and also as part of the <a class="weblink" href="http://mvrl.cs.uky.edu/">Multimodal Vision Research Laboratory</a>.
-      
-      My primary research interests lie in tropical geometry, machine learning, and topological data analysis.
+    </p>
+    <p>
+      My primary research interests lie in commutative algebra and topological data analysis.
       A copy of my CV can be found <a class="weblink" href="./misc/CV.pdf">here</a> along with my contact information. 
-      Photo is courtesy of Nathan Jacobs.
     </p>
   </div>
 
   <!-- Graduate Research Section -->
-  <div class="w3-container w3-padding-32" id="Graduate Research">
+  <div class="w3-container w3-padding-32" id="GraduateResearch">
     <h3 class="w3-border-bottom w3-border-grey w3-padding-16">Graduate Research</h3>
   </div>
 
@@ -70,7 +70,7 @@
   </div>
 
   <!-- Undergraduate Research Section -->
-  <div class="w3-container w3-padding-32" id="Undergraduate Research">
+  <div class="w3-container w3-padding-32" id="UndergraduateResearch">
     <h3 class="w3-border-bottom w3-border-grey w3-padding-16">Undergraduate Research</h3>
   </div>
 
