--- a/index.html
+++ b/index.html
@@ -29,26 +29,19 @@
 <!-- Page content -->
 <div class="w3-content w3-padding" style="max-width:1564px">
 
-  <!-- Main image-->
-  <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="Home">
-    <img class="w3-image" src="./images/visualizations/clebsh_render.png" alt="clebsh_render" width="1500" height="800">
-    <div class="w3-display-middle w3-margin-top w3-center">
-      <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Sean Grate</b></span></h1>
-    </div>
-  </header>
-
   <!-- About Section -->
   <div class="w3-container w3-padding-32" id="About">
     <h3 class="w3-border-bottom w3-border-grey w3-padding-16">About</h3>
-    <img class="w3-image" src="./images/me_trimmed.jpg" alt="me" style="max-width:30%; height:auto; padding: 0px 16px 0px 16px; float:left">
+    <img class="w3-image" src="./images/me_trimmed.jpg" alt="me" style="max-width:30%; height:auto; padding: 16px; float:left">
     <p>
-      I am graduate student in Mathematics at Auburn University studying under <a class="weblink" href="http://webhome.auburn.edu/~hks0015/">Hal Schenck</a>.
+      I am a fourth-year graduate student in Mathematics at Auburn University studying under <a class="weblink" href="http://webhome.auburn.edu/~hks0015/">Hal Schenck</a>.
       I earned a B.S. in Mathematics with minors in History and Classics at the University of Kentucky.
       While at the University of Kentucky, I conducted research with the <a class="weblink" href="http://www.ms.uky.edu/~geometrylab/">University of Kentucky Math Lab</a>
       and also as part of the <a class="weblink" href="http://mvrl.cs.uky.edu/">Multimodal Vision Research Laboratory</a>.
     </p>
     <p>
       My primary research interests lie in commutative algebra and topological data analysis.
+      However, a lot of side projects that interest me come from combinatorial optimization.
       A copy of my CV can be found <a class="weblink" href="./misc/CV.pdf">here</a> along with my contact information. 
     </p>
   </div>
