Small corrections to descriptions

--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
       <img src="./images/assignments/assignments.PNG" alt="assignments" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>TA Assignments</b></p>
-        <p>Is there a nice algorithm to assign TAs to classes given constraints and preferences?</p>
+        <p>Is there a nice algorithm to assign TAs to teaching assignments given a set of constraints and a list of preferences?</p>
       </div>
     </div>
     <div class="w3-third w3-container">
       <img src="./images/minecraft/mountain overlook (small).png" alt="minecraft" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Generating Minecraft Worlds</b></p>
-        <p>Use techniques from deep learning and real world data to generate realistic worlds in Minecraft.</p>
+        <p>Use techniques from deep learning combined with real world data to generate realistic worlds in Minecraft.</p>
       </div>
     </div>
   </div>
