Added links and swapped footer contents

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <div class="w3-row-padding">
     <h4 id="research"><b>Graduate Research</b></h4>
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="./images/tda/kde.gif" alt="tda" style="width:100%" class="w3-hover-opacity">
+      <a class="weblink" href="./tda.html"><img src="./images/tda/kde.gif" alt="tda" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Topological Data Analysis</b></p>
         <p>Use techniques from computational topology to analyze and exploit the shape of data.</p>
@@ -97,21 +97,21 @@
   <div class="w3-row-padding">
     <h4><b>Undergraduate Research</b></h4>
     <!-- <div class="w3-third w3-container w3-margin-bottom">
-      <img src="./images/resampling/plane.gif" alt="resampling" style="width:100%" class="w3-hover-opacity">
+      <a class="weblink" href="./resampling.html"><img src="./images/resampling/plane.gif" alt="resampling" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Point Cloud Resampling</b></p>
         <p>Use deep learning to get a better resolution of point cloud data.</p>
       </div>
     </div> -->
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="./images/heisenberg/tetra_growth.gif" alt="heisenberg" style="width:100%" class="w3-hover-opacity">
+      <a class="weblink" href="./heisenberg.html"><img src="./images/heisenberg/tetra_growth.gif" alt="heisenberg" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Discrete Heisenberg Group</b></p>
         <p>How well does Ehrhart theory translate to the noncommutative world?</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="./images/flightroute/franklin_torch_flight.gif" alt="flight route" style="width:100%" class="w3-hover-opacity">
+      <a class="weblink" href="./flightroute.html"><img src="./images/flightroute/franklin_torch_flight.gif" alt="flight route" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Flight Route Estimation</b></p>
         <p>How well can you estimate the path of a LiDAR sensor given a scan of the terrain?</p>
@@ -123,21 +123,21 @@
   <div class="w3-row-padding">
     <h4 id="projects"><b>Projects</b></h4>
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="./images/visualizations/twisted_cubic_surface_render.png" alt="twisted cubic" style="width:100%" class="w3-hover-opacity">
+      <a class="weblink" href="./visualizations.html"><img src="./images/visualizations/twisted_cubic_surface_render.png" alt="twisted cubic" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Visualizing Algebraic Surfaces</b></p>
         <p>Cool 3D prints of objects popping up in math.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="./images/assignments/assignments.PNG" alt="assignments" style="width:100%" class="w3-hover-opacity">
+      <a class="weblink" href="./assignments.html"><img src="./images/assignments/assignments.PNG" alt="assignments" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>TA Assignments</b></p>
         <p>Is there a nice algorithm to assign TAs to teaching assignments given a set of constraints and a list of preferences?</p>
       </div>
     </div>
     <div class="w3-third w3-container">
-      <img src="./images/minecraft/mountain overlook (small).png" alt="minecraft" style="width:100%" class="w3-hover-opacity">
+      <a class="weblink" href="./minecraft.html"><img src="./images/minecraft/mountain overlook (small).png" alt="minecraft" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Generating Minecraft Worlds</b></p>
         <p>Use techniques from deep learning combined with real world data to generate realistic worlds in Minecraft.</p>
@@ -149,6 +149,11 @@
   <footer class="w3-container w3-padding-32 w3-dark-grey">
   <div class="w3-row-padding">
     <div class="w3-half">
+      <h3>Contact</h3>
+      Office: 122H Parker Hall<br>
+      Email: sean.grate@auburn.edu
+    </div>
+    <div class="w3-half">
       <h3>Mailing Address</h3>
       <p>
         Department of Mathematics and Statistics<br>
@@ -156,12 +161,6 @@
         Auburn University, AL 36849<br>
         USA
       </p>
-    </div>
-  
-    <div class="w3-half">
-      <h3>Contact</h3>
-      Office: 122H Parker Hall<br>
-      Email: sean.grate@auburn.edu
     </div>
   </div>
   </footer>
