--- a/index.html
+++ b/index.html
@@ -44,23 +44,14 @@
 <div class="w3-main" style="margin-left:300px">
 
   <!-- Header -->
-  <header id="about">
+  <header>
     <a href="#"><img src="./images/me_trimmed.jpg" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
     <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
-    <div class="w3-container">
-    <!-- <h1><b>Sean Grate</b></h1> -->
-    <!-- <div class="w3-section w3-bottombar w3-padding-16">
-      <span class="w3-margin-right">Filter:</span> 
-      <button class="w3-button w3-black">ALL</button>
-      <button class="w3-button w3-white"><i class="fa fa-diamond w3-margin-right"></i>Design</button>
-      <button class="w3-button w3-white w3-hide-small"><i class="fa fa-photo w3-margin-right"></i>Photos</button>
-      <button class="w3-button w3-white w3-hide-small"><i class="fa fa-map-pin w3-margin-right"></i>Art</button>
-    </div> -->
-    </div>
   </header>
 
+  <!-- About -->
   <div class="w3-container w3-padding-large" style="margin-bottom:32px">
-    <h4><b>About</b></h4>
+    <h4 id="about"><b>About</b></h4>
     <p>
       I am a fourth-year graduate student in Mathematics at Auburn University studying under <a class="weblink" href="http://webhome.auburn.edu/~hks0015/">Hal Schenck</a>.
       I earned a B.S. in Mathematics with minors in History and Classics at the University of Kentucky.
