Updated visualizations page

--- a/resampling.html
+++ b/resampling.html
@@ -38,7 +38,6 @@
 <!-- Overlay effect when opening sidebar on small screens -->
 <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
-
 <!-- Page content -->
 <div class="w3-main" style="margin-left:300px">
   <!-- Header -->
@@ -47,6 +46,7 @@
     <div class="w3-container">
     </div>
   </header>
+  <!-- Background -->
   <div id="background" class="w3-container w3-padding-large" style="margin-bottom:32px">
     <h4><b>Background</b></h4>
     <div class="w3-content w3-display-container", style="max-width:512px; max-height:512px">
@@ -78,7 +78,7 @@
     construct arbitrary resolution point clouds given a single, sparse point
     cloud of the surface.</p>
   </div>
-
+  <!-- Approaches -->
   <div id="approaches" class="w3-container w3-padding-large" style="margin-bottom:32px">
       <h4><b>Approaches</b></h4>
       <p>We set up a <a class="weblink" href="https://en.wikipedia.org/wiki/Autoencoder#Variational_autoencoder_(VAE)">
@@ -129,6 +129,7 @@
       and <a class="weblink" href="http://cs.uky.edu/~jacobs/">Nathan Jacobs</a>.
     </p>
   </div>
+<!-- End page content -->
 </div>
 
 <script>
