Updated assignments page

--- a/visualizations.html
+++ b/visualizations.html
@@ -26,7 +26,7 @@
     </a>
     <img src="./images/visualizations/twisted_cubic_surface_render.png" style="width:100%;" class="w3-round"><br><br>
     <h4><b>Visualizing Algebraic Surfaces</b></h4>
-    <p class="w3-text-grey">Using 3D printing to visualize algebraic surfaces.</p>
+    <p class="w3-text-grey">Use 3D printing to visualize algebraic surfaces.</p>
   </div>
   <div class="w3-bar-block">
     <a href="./index.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-arrow-left fa-fw w3-margin-right"></i>GO HOME</a> 
