--- a/assignments.html
+++ b/assignments.html
@@ -164,8 +164,8 @@
 
   <div class="w3-black w3-center w3-padding-24">
     <p>Investigated with Jessica Appel, Michael Boyd, and Kathryn Schantz under
-      the mentorship of <a class="weblink" href="http://www.ms.uky.edu/~kate/" target="_blank">Kate Ponto</a>.
-      Code can be found <a class="weblink" href="https://github.com/UKYMathLab/Assignments" target="_blank">here</a>.
+      the mentorship of <a class="weblink" href="http://www.ms.uky.edu/~kate/" title="Kate Ponto" target="_blank" class="w3-hover-opacity">Kate Ponto</a>.
+      Code can be found <a class="weblink" href="https://github.com/UKYMathLab/Assignments" title="GitHub repository" target="_blank" class="w3-hover-opacity">here</a>.
     </p>
   </div>
 <!-- End page content -->
