--- a/heisenberg.html
+++ b/heisenberg.html
@@ -234,10 +234,10 @@
   </footer>
 
   <div class="w3-black w3-center w3-padding-24">
-    <p>Investigated with <a class="weblink" href="https://aavichitbandha.github.io/" target="_blank">Angela Vichitbanda</a> 
+    <p>Investigated with <a class="weblink" href="https://aavichitbandha.github.io/"  title="Angela Vichitbanda" target="_blank" class="w3-hover-opacity">Angela Vichitbanda</a> 
       and Joe Cecil under the mentorship
-      of <a class="weblink" href="http://www.ms.uky.edu/~cama268/" target="_blank">Chris Manon</a>.
-      Code can be found <a class="weblink" href="https://github.com/UKYMathLab/Heisenberg" target="_blank">here</a>.
+      of <a class="weblink" href="http://www.ms.uky.edu/~cama268/"  title="Chris Manon" target="_blank" class="w3-hover-opacity">Chris Manon</a>.
+      Code can be found <a class="weblink" href="https://github.com/UKYMathLab/Heisenberg"  title="GitHub repository" target="_blank" class="w3-hover-opacity">here</a>.
     </p>
   </div>
 
