--- a/resampling.html
+++ b/resampling.html
@@ -125,8 +125,8 @@
   </footer>
 
   <div class="w3-black w3-center w3-padding-24">
-    <p>Joint work with <a class="weblink" href="https://hblanton.github.io/">Hunter Blanton</a>
-      and <a class="weblink" href="http://cs.uky.edu/~jacobs/">Nathan Jacobs</a>.
+    <p>Joint work with <a class="weblink" href="https://hblanton.github.io/" title="Hunter Blanton" target="_blank" class="w3-hover-opacity">Hunter Blanton</a>
+      and <a class="weblink" href="https://jacobsn.github.io/" title="Nathan Jacobs" target="_blank" class="w3-hover-opacity">Nathan Jacobs</a>.
     </p>
   </div>
 <!-- End page content -->
