--- a/visualizations.html
+++ b/visualizations.html
@@ -136,7 +136,7 @@
   </footer>
 
   <div class="w3-black w3-center w3-padding-24">
-    <p>Code can be found <a class="weblink" href="https://github.com/UKYMathLab/3dprinting" target="_blank">here</a>.</p>
+    <p>Code can be found <a class="weblink" href="https://github.com/UKYMathLab/3dprinting" title="GitHub repository" target="_blank" class="w3-hover-opacity">here</a>.</p>
   </div>
 <!-- End page content -->
 </div>
