--- a/heisenberg.html
+++ b/heisenberg.html
@@ -30,7 +30,7 @@
   </div>
   <div class="w3-bar-block">
     <a href="./index.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-arrow-left fa-fw w3-margin-right"></i>GO HOME</a> 
-    <a href="#background" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-file-text w3-margin-right"></i>BACKGROUND</a> 
+    <a href="#background" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-book w3-margin-right"></i>BACKGROUND</a> 
     <a href="#setup" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-wrench w3-margin-right"></i>SETUP</a> 
     <a href="#results" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-pencil fa-fw w3-margin-right"></i>RESULTS</a>
   </div>
