--- a/visualizations.html
+++ b/visualizations.html
@@ -30,9 +30,9 @@
   </div>
   <div class="w3-bar-block">
     <a href="./index.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-arrow-left fa-fw w3-margin-right"></i>GO HOME</a> 
-    <a href="#27 Lines" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-file-text w3-margin-right"></i>27 LINES</a> 
-    <a href="#Twisted Cubic" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-map w3-margin-right"></i>TWISTED CUBIC</a> 
-    <a href="#Calculus III" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-map w3-margin-right"></i>CALCULUS III</a> 
+    <a href="#27 Lines" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-exchange w3-margin-right"></i>27 LINES</a> 
+    <a href="#Twisted Cubic" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-cube w3-margin-right"></i>TWISTED CUBIC</a> 
+    <a href="#Calculus III" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-area-chart w3-margin-right"></i>CALCULUS III</a> 
   </div>
 </nav>
 
