Corrected sidebar image on Minecraft page

--- a/minecraft.html
+++ b/minecraft.html
@@ -24,7 +24,7 @@
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
-    <img src="./images/assignments/assignments.PNG" style="width:100%;" class="w3-round"><br><br>
+    <img src="./images/minecraft/world by height.png" style="width:100%;" class="w3-round"><br><br>
     <h4><b>Generating Minecraft Worlds</b></h4>
     <p class="w3-text-grey">Generate worlds in Minecraft with deep learning and real world data.</p>
   </div>
