Updated Lefschetz with image and tiny description.

--- a/lefschetz.html
+++ b/lefschetz.html
@@ -24,7 +24,7 @@
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
-    <!-- <img src="./images/tda/kde.gif" style="width:100%;" class="w3-round"><br><br> -->
+    <img src="./images/lefschetz/hypersurface.png" style="width:100%;" class="w3-round"><br><br>
     <h4><b>Lefschetz Properties</b></h4>
     <p class="w3-text-grey">When is multiplication by a linear form full rank?</p>
   </div>
@@ -57,14 +57,17 @@
   <div id="background" class="w3-container w3-padding-large" style="margin-bottom:32px">
     <h4><b>Background</b></h4>
     <p>
-      In progress.
+      Let \( k \) be a field and \( A \) a (standard) graded Artinian \( k \)-algebra.
+      \( A \) is said to have the Weak Lefschetz Property (WLP) if multiplication by a general linear form \( \times l \colon A_i \rightarrow A_{i+1} \) is full rank for all \( i \geq 0 \).
+      We also say \( A \) has the Strong Lefschetz Property (SLP) if multiplication by powers of a general linear form \( \times l^d \colon A_i \rightarrow A_{i+d} \) is full rank for all \( i \geq 0 \) and for all \( d \geq 0\).
+      Note that if \( A \) has the SLP, then \( A \) also has the WLP.
     </p>
     <hr>
   </div>
   <div id="results" class="w3-container w3-padding-large" style="margin-bottom:32px">
     <h4><b>Results</b></h4>
     <p>
-      In progress.
+      While this page is under construction, please see <cite><a class="weblink" href="http://arxiv.org/abs/2307.13126">Betti tables forcing failure of the Weak Lefschetz Property</a></cite> for some results.
     </p>
     <hr>
   </div>
