--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
       <div class="w3-container w3-white">
+        <a class="weblink" href="./tda.html"><img src="./images/lefschetz/hypersurface.png" alt="tda" style="width:100%" class="w3-hover-opacity"></a>
         <p><b>Lefschetz Properties</b></p>
         <p>When does multiplication by a linear form have full rank in an Artinian algebra?</p>
       </div>
