--- a/lefschetz.html
+++ b/lefschetz.html
@@ -62,12 +62,29 @@
       We also say \( A \) has the Strong Lefschetz Property (SLP) if multiplication by powers of a general linear form \( \times l^d \colon A_i \rightarrow A_{i+d} \) is full rank for all \( i \geq 0 \) and for all \( d \geq 0\).
       Note that if \( A \) has the SLP, then \( A \) also has the WLP.
     </p>
+    <p>
+      <!-- Should mention relevance to other fields. -->
+      Although this is phrased algebraically, this turns out to be of use to combinatorialists as well.
+      Of interest to many combinatorialists is if some sequence is unimodal (or log-concave).
+      It turns out that the \( h \)-vector of an Artinian algebra with the WLP must be unimodal.
+      So, a strategy for a combinatorialist to show that their sequence is unimodal is to construct an Artinian algebra and show that this algebra has the WLP.
+    </p>
+    <p>
+      Determining if an Artinian algebra \( A \) has the WLP seems like an innocent problem, but it turns out to be <em>extremely</em> hard to answer.
+      Even in the case of Artinian Gorenstein algebras, this is still a very difficult question.
+      Since this problem is phrased with a foundation in algebra, many of the methods to try to characterize such Artinian algebras rely on algebraic methods.
+    </p>
+    <p>
+      Exploiting the correspondence between algebra and geometry, some authors have tried to determine how the geometry of an object influences its corresponding Artinian algebra having the WLP.
+      For instance, 
+    </p>
     <hr>
   </div>
   <div id="results" class="w3-container w3-padding-large" style="margin-bottom:32px">
     <h4><b>Results</b></h4>
     <p>
-      While this page is under construction, please see <cite><a class="weblink" href="http://arxiv.org/abs/2307.13126">Betti tables forcing failure of the Weak Lefschetz Property</a></cite> for some results.
+      
+      While this page is under construction, please see <cite><a class="weblink" href="http://arxiv.org/abs/2307.13126" target="_blank">Betti tables forcing failure of the Weak Lefschetz Property</a></cite> for some results.
     </p>
     <hr>
   </div>
