--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
   </div>
   <div class="w3-bar-block">
     <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i>ABOUT</a> 
-    <a href="#research" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-file-text w3-margin-right"></i>RESEARCH</a> 
+    <a href="#research" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-file-text w3-margin-right"></i>RESEARCH</a>
+    <a href="#software" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-terminal fa-fw w3-margin-right"></i>SOFTWARE</a> 
     <a href="#projects" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-pencil fa-fw w3-margin-right"></i>PROJECTS</a>
   </div>
   <div class="w3-panel w3-large">
@@ -107,6 +108,18 @@
       <div class="w3-container w3-white">
         <p><b>Flight Route Estimation</b></p>
         <p>How well can you estimate the path of a LiDAR sensor given a scan of the terrain?</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Software -->
+  <div class="w3-row-padding">
+    <h4 id="software"><b>Software</b></h4>
+    <div class="w3-third w3-container w3-margin-bottom">
+      <a class="weblink" href="./matrixschubert.html"><img src="./images/matrixschubert/pipe_dream.png" alt="matrixschubert" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-container w3-white">
+        <p><b>MatrixSchubert</b></p>
+        <p>A Macaulay2 package with functions for investigating ASM and matrix Schubert varieties.</p>
       </div>
     </div>
   </div>
