Changed styling on hyperlinks

--- a/lefschetz.html
+++ b/lefschetz.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
     body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
+    a.weblink:hover {opacity:0.6}
   </style>
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>  
@@ -83,8 +84,7 @@
   <div id="results" class="w3-container w3-padding-large" style="margin-bottom:32px">
     <h4><b>Results</b></h4>
     <p>
-      
-      While this page is under construction, please see <cite><a class="weblink" href="http://arxiv.org/abs/2307.13126" target="_blank">Betti tables forcing failure of the Weak Lefschetz Property</a></cite> for some results.
+      While this page is under construction, please see <cite><a class="weblink" href="https://arxiv.org/abs/2307.13126" target="_blank">Betti tables forcing failure of the Weak Lefschetz Property</a></cite> for some results.
     </p>
     <hr>
   </div>
