--- a/R33.html
+++ b/R33.html
@@ -11,78 +11,87 @@
 <style>
     body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     a.weblink:hover {opacity:0.6}
-    table, th, td {border: 1px solid black; border-collapse: collapse;}
+    table, th, td {border: 1px solid black; border-collapse: collapse; padding: 15px}
+    html, body {height: 100%;}
+    html {display: table; margin: auto;}
+    body {display: table-cell; vertical-align: middle;}
 </style>
 </head>
 <body>
 <table>
 <tr><th>Group 1</th></tr>
-<tr><td>Jacob Newton</td></tr>
-<tr><td>Andrew Amos</td></tr>
-<tr><td>Ariel Rowland</td></tr>
-<tr><td>Molly Grace Hicks</td></tr>
-</table>
-<br></br>
-
-<table>
-<tr><th>Group 2</th></tr>
-<tr><td>William Foster</td></tr>
 <tr><td>Alex McCord</td></tr>
-<tr><td>Riya Vashisht</td></tr>
-<tr><td>Jordan Caskey</td></tr>
-</table>
-<br></br>
-
-<table>
-<tr><th>Group 3</th></tr>
-<tr><td>Alex Shepherd</td></tr>
-<tr><td>Gavin Dow</td></tr>
-<tr><td>Hannah Benton</td></tr>
+<tr><td>Dylan D'Agostino</td></tr>
+<tr><td>Molly Grace Hicks</td></tr>
 <tr><td>Hannah Thompson</td></tr>
 </table>
 <br></br>
 
 <table>
-<tr><th>Group 4</th></tr>
-<tr><td>Dax Causey</td></tr>
+<tr><th>Group 2</th></tr>
 <tr><td>Nick Schroeder</td></tr>
-<tr><td>Andre Salles</td></tr>
+<tr><td>Jonathan Oyen</td></tr>
+<tr><td>Jordan Caskey</td></tr>
+<tr><td>Ariel Rowland</td></tr>
+</table>
+<br></br>
+
+<table>
+<tr><th>Group 3</th></tr>
+<tr><td>Aman Patel</td></tr>
+<tr><td>Jack Ferrier</td></tr>
+<tr><td>Annalee Fink</td></tr>
+<tr><td>Brittany Harvey</td></tr>
+</table>
+<br></br>
+
+<table>
+<tr><th>Group 4</th></tr>
 <tr><td>Parker Groer</td></tr>
+<tr><td>Chase Carithers</td></tr>
+<tr><td>Ravi Locker</td></tr>
+<tr><td>Gavin Dow</td></tr>
 </table>
 <br></br>
 
 <table>
 <tr><th>Group 5</th></tr>
-<tr><td>Nate Bustard</td></tr>
-<tr><td>An Minh Dam</td></tr>
+<tr><td>Jacob Newton</td></tr>
+<tr><td>Dax Causey</td></tr>
 <tr><td>Jake Thomson</td></tr>
-<tr><td>Brent Russell</td></tr>
+<tr><td>Alex Shepherd</td></tr>
 </table>
 <br></br>
 
 <table>
 <tr><th>Group 6</th></tr>
-<tr><td>Zach Hayes</td></tr>
-<tr><td>Jack Ferrier</td></tr>
-<tr><td>Aman Patel</td></tr>
-<tr><td>Austin Rader</td></tr>
+<tr><td>An Minh Dam</td></tr>
+<tr><td>Brent Russell</td></tr>
+<tr><td>Andre Salles</td></tr>
 </table>
 <br></br>
 
 <table>
 <tr><th>Group 7</th></tr>
-<tr><td>Ravi Locker</td></tr>
-<tr><td>Stone Wheeler</td></tr>
-<tr><td>Chase Carithers</td></tr>
-<tr><td>Dylan D'Agostino</td></tr>
+<tr><td>Zach Hayes</td></tr>
+<tr><td>Nate Bustard</td></tr>
+<tr><td>Austin Rader</td></tr>
 </table>
 <br></br>
 
 <table>
 <tr><th>Group 8</th></tr>
+<tr><td>Andrew Amos</td></tr>
+<tr><td>William Foster</td></tr>
+<tr><td>Stone Wheeler</td></tr>
+</table>
+<br></br>
+
+<table>
+<tr><th>Group 9</th></tr>
+<tr><td>Hannah Benton</td></tr>
+<tr><td>Riya Vashisht</td></tr>
 <tr><td>Lily Konrad</td></tr>
-<tr><td>Annalee Fink</td></tr>
-<tr><td>Brittany Harvey</td></tr>
 </table>
 <br></br>
 
