Added Papers section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   </div>
   <div class="w3-bar-block">
     <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i>ABOUT</a> 
+    <a href="#papers" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-file-text w3-margin-right"></i>PAPERS</a>
     <a href="#research" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-file-text w3-margin-right"></i>RESEARCH</a>
     <a href="#software" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-terminal fa-fw w3-margin-right"></i>SOFTWARE</a> 
     <a href="#projects" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-pencil fa-fw w3-margin-right"></i>PROJECTS</a>
@@ -55,16 +56,53 @@
   <div class="w3-container w3-padding-large" style="margin-bottom:32px">
     <h4 id="about"><b>About</b></h4>
     <p>
-      I am a fourth-year graduate student in Mathematics at Auburn University studying under <a class="weblink" href="http://webhome.auburn.edu/~hks0015/">Hal Schenck</a>.
+      I am a fourth-year graduate student in Mathematics at Auburn University studying under <a class="weblink" href="http://webhome.auburn.edu/~hks0015/" target="_blank">Hal Schenck</a>.
       I earned a B.S. in Mathematics with minors in History and Classics at the University of Kentucky.
-      While at the University of Kentucky, I conducted research with the <a class="weblink" href="http://www.ms.uky.edu/~geometrylab/">University of Kentucky Math Lab</a>
-      and also as part of the <a class="weblink" href="http://mvrl.cs.uky.edu/">Multimodal Vision Research Laboratory</a>.
+      While at the University of Kentucky, I conducted research with the <a class="weblink" href="http://www.ms.uky.edu/~geometrylab/" target="_blank">University of Kentucky Math Lab</a>
+      and also as part of the <a class="weblink" href="http://mvrl.cs.uky.edu/" target="_blank">Multimodal Vision Research Laboratory</a>.
     </p>
     <p>
       My primary research interests lie in commutative algebra and topological data analysis.
       However, I've been finding that a lot of side projects that interest me come from combinatorial optimization.
       A copy of my CV can be found <a class="weblink" href="./misc/CV.pdf">here</a> along with my contact information. 
     </p>
+    <hr>
+  </div>
+
+  <!-- Publications -->
+  <div class="w3-row-padding">
+    <h4 id="papers"><b>Papers</b></h4>
+    <div class="w3-container">
+    <p>Publications</p>
+    <ol>
+      <li><a class="weblink" href="https://arxiv.org/abs/2307.13126" target="_blank">Betti tables forcing failure of the Weak Lefschetz Property</a> 
+        (with <a class="weblink" href="http://webhome.auburn.edu/~hks0015/" target="_blank">Hal Schenck</a>). 
+        In: <a class="weblink" href="https://www.springer.com/series/10283" target="_blank">Springer INdAM series: The strong and weak Lefschetz properties</a> (2023), to appear.
+      </li>
+      <li><a class="weblink" href="https://ieeexplore.ieee.org/document/9323522" target="_blank">Surface modeling for airborne lidar</a> 
+        (with <a class="weblink" href="https://hblanton.github.io/" target="_blank">Hunter Blanton</a> and <a class="weblink" href="https://jacobsn.github.io/" target="_blank">Nathan Jacobs</a>). 
+        In: <a class="weblink" href="https://ieeexplore.ieee.org/xpl/conhome/9323073/proceeding" target="_blank">IGARSS 2020-2020 IEEE International Geoscience and Remote Sensing Symposium.</a> 
+        2020, pp. 1110–1113.
+      </li>
+    </ol>
+    <p>Preprints</p>
+    <ol>
+        <li>Suturing the Severed Didactic Tetrahedron: Graph Theoretic Reflection to Foster Alignment in Coordinated Course 
+          (with <a class="weblink" href="https://www.hailegilroy.com/" target="_blank">Haile Gilroy</a> 
+          and <a class="weblink" href="https://www.auburn.edu/cosam/faculty/math_stats/lanius/index.htm" target="_blank">Melinda Lanius</a>).
+          In preparation.
+        </li>
+        <li><a class="weblink" href="https://arxiv.org/abs/2312.07393" target="_blank">The MatrixSchubert package for Macaulay2</a>
+          (with <a class="weblink" href="https://sites.google.com/view/ayah-almousa/" target="_blank">Ayah Almousa</a>, 
+          <a class="weblink" href="https://www.daojihuang.me/" target="_blank">Daoji Huang</a>,
+          <a class="weblink" href="https://patriciajklein.github.io/" target="_blank">Patricia Klein</a>,
+          <a class="weblink" href="https://sites.google.com/view/adamlaclair/home" target="_blank">Adam LaClair</a>,
+          <a class="weblink" href="https://www.mit.edu/~lyuyuan/" target="_blank">Yuyuan Luo</a>,
+          and <a class="weblink" href="https://jmcdonough98.github.io/" target="_blank">Joseph McDonough</a>).
+          Submitted.
+        </li>       
+      </ol>
+    </div>
     <hr>
   </div>
 
